2006-05-31  Elijah Newren  <newren gmail com>

	* versions-stable:
	Update for Gnome 2.14.2

2006-05-30  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion-stable.config:
	Avoid unstable vte releases, fix download locations for gstreamer
	tarballs

2006-05-17  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion.config:
	Let's make this the last time I fall for that gstreamer mess.
	This change will need to be undone if gstreamer and gst-plugins-*
	become external dependencies, though.

2006-05-17  Elijah Newren  <newren gmail com>

	* release_set_scripts/release-suites:
	Ugh, let's hope this kills those permission problems

2006-05-17  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	GNOME 2.15.2

2006-05-16  Elijah Newren  <newren gmail com>

	* convert-to-tarballs.py:
	* tarball-conversion.config:
	jhbuild format has changed considerably recently; update to match
	the new format

2006-04-26  Vincent Untz  <vuntz@gnome.org>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc: GNOME 2.15.1

2006-04-26  Elijah Newren  <newren gmail com>

	* smoketesting/convert-to-tarballs.py:
	Handle adding subdir names (e.g. c++, python) to the versions file
	where needed.  Still don't have items sorted by module, though.

	* smoketesting/tarball-conversion.config:
	Remove pkg-config since we haven't been including it for a while
	anyway and updates aren't being placed on ftp.gnome.org anymore,
	add subdirectory specifications for bindings modules so that they
	appear in the versions file

2006-04-25  Elijah Newren  <newren gmail com>

	* versions-stable:
	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config:
	Renamed from -2-12 to -stable, copied the 2.14 versions over them
	since that's the stable branch now, and updated limits to be
	relevant for the 2.14 versions.

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config: